--- a/package.json
+++ b/package.json
@@ -19,5 +19,15 @@
         "tailwindcss": "^4.1.6",
         "vite": "^6.2.4",
         "vue": "^3.3.13"
+    },
+    "dependencies": {
+        "@vueuse/core": "^13.1.0",
+        "class-variance-authority": "^0.7.1",
+        "clsx": "^2.1.1",
+        "embla-carousel-vue": "^8.6.0",
+        "lucide-vue-next": "^0.509.0",
+        "reka-ui": "^2.2.1",
+        "tailwind-merge": "^3.2.0",
+        "tw-animate-css": "^1.2.9"
     }
 }
