--- a/package.json
+++ b/package.json
@@ -24,10 +24,12 @@
         "@vueuse/core": "^13.1.0",
         "class-variance-authority": "^0.7.1",
         "clsx": "^2.1.1",
+        "embla-carousel-autoplay": "^8.6.0",
         "embla-carousel-vue": "^8.6.0",
         "lucide-vue-next": "^0.509.0",
         "reka-ui": "^2.2.1",
         "tailwind-merge": "^3.2.0",
-        "tw-animate-css": "^1.2.9"
+        "tw-animate-css": "^1.2.9",
+        "vue-sonner": "^1.3.2"
     }
 }
